[gd_scene load_steps=15 format=3 uid="uid://tg817xql5j5"]

[ext_resource type="Script" path="res://Scripts/CanvasGroup.gd" id="1_fjfch"]
[ext_resource type="Texture2D" uid="uid://6oxhv2tbjrxx" path="res://Assets/2D Sprites/Main Menu Sprites/golden retrieve 0.png" id="2_isnpn"]
[ext_resource type="Texture2D" uid="uid://dchcokmmmsklf" path="res://Assets/2D Sprites/Main Menu Sprites/Title.png" id="2_t5d3u"]
[ext_resource type="Texture2D" uid="uid://cu4h46tubuav3" path="res://Assets/2D Sprites/Main Menu Sprites/cooltext443441851010057.png" id="4_g3tnr"]
[ext_resource type="StyleBox" uid="uid://r1obd1cxxxl0" path="res://Assets/Tres/Menu_button_Normal.tres" id="5_kcfnc"]
[ext_resource type="FontFile" uid="uid://bbvxijaalpggu" path="res://Assets/Fonts/Sparky Stones.ttf" id="5_xkbkr"]
[ext_resource type="StyleBox" uid="uid://ndauv3i1i23w" path="res://Assets/Tres/Menu_button_Hover.tres" id="6_ngix0"]
[ext_resource type="StyleBox" uid="uid://bhfhr6khhuab8" path="res://Assets/Tres/Menu_button_Pressed.tres" id="7_cxbna"]
[ext_resource type="AudioStream" uid="uid://xvqgysxs0lrg" path="res://Assets/Soundtracks/Warm-Memories-Emotional-Inspiring-Piano(chosic.com).mp3" id="8_f6t6m"]
[ext_resource type="AudioStream" uid="uid://drhtwjsaw5jko" path="res://Assets/Soundtracks/button.wav" id="9_6iaw4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24166"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vlqf5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g84ow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vagg3"]

[node name="Menu" type="Node2D"]

[node name="CanvasGroup" type="CanvasGroup" parent="."]
script = ExtResource("1_fjfch")

[node name="Sprite2D" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(581, 331)
scale = Vector2(0.874817, 0.890625)
texture = ExtResource("2_isnpn")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(550, 381)
scale = Vector2(1.26911, 0.939568)
texture = ExtResource("2_t5d3u")

[node name="PlayButton" type="Button" parent="CanvasGroup"]
offset_left = 353.0
offset_top = 492.0
offset_right = 720.0
offset_bottom = 586.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_24166")
theme_override_styles/hover = SubResource("StyleBoxTexture_vlqf5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g84ow")
icon = ExtResource("4_g3tnr")

[node name="QuitButton" type="Button" parent="CanvasGroup"]
offset_left = 1061.0
offset_top = 7.0
offset_right = 1144.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("5_xkbkr")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("5_kcfnc")
theme_override_styles/hover = ExtResource("6_ngix0")
theme_override_styles/pressed = ExtResource("7_cxbna")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vagg3")
text = "EXIT"

[node name="MenuSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f6t6m")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_6iaw4")

[connection signal="pressed" from="CanvasGroup/PlayButton" to="CanvasGroup" method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasGroup/QuitButton" to="CanvasGroup" method="_on_quit_button_pressed"]
